--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 style="color: blue;">League Stats :)</h1>
-<app-search></app-search>
+<div style="background-color: #1C1C1F;">
+    <h1 style="color: blue;">League Stats :)</h1>
+    <app-search></app-search>
+</div>
