--- a/client/src/app/search/search.component.html
+++ b/client/src/app/search/search.component.html
@@ -1,39 +1,86 @@
-<form #searchForm="ngForm" id="searchForm" (ngSubmit)="getAccount(searchForm.value.username, searchForm.value.tag)">
-    <input type="search" class="form me-sm-2" name="username" placeholder="Summoner Name..." ngModel #usernameInput="ngModel">
-    <input type="search" class="form me-sm-2" name="tag" placeholder="Tag..." ngModel #tagInput="ngModel">
-    <button class="btn btn-primary" type="submit" form="searchForm">Search</button>
-</form>
 
-<div *ngIf="account">
-    <h1 style="color: blue;">Summoner Name: {{ account.gameName }}</h1>
-  
-    <!-- Exibe mensagem de carregamento -->
-    <h2 *ngIf="isLoading">Carregando dados...</h2>
-  
-    <!-- Exibe os dados quando carregados -->
-    <div *ngIf="!isLoading">
-      <div *ngFor="let champion of championsWithMastery">
-        <h1 style="color: chartreuse;">{{ champion.name }}</h1> <h1> - Mastery Level : {{champion.championLevel}} - Mastery Points: {{ champion.championPoints }}</h1>
-      </div>
-      <div *ngFor="let match of matches">
-        <div *ngFor="for let player of match.info.participants">
-          <div *ngIf="player.puuid == account.puuid">
-            <div *ngIf="player.nexusLost == 1">
-              <h3 style="background-color: red;">
-                {{match.info.gameMode}} | {{player.championName}} : {{player.kills}} / {{player.deaths}} / {{player.assists}}
-              </h3>
-            </div>
-            <div *ngIf="player.nexusLost == 0">
-              <h3 style="background-color: green;">
-                {{match.info.gameMode}} | {{player.championName}} : {{player.kills}} / {{player.deaths}} / {{player.assists}}
-              </h3>
-            </div>
-            
-          </div>
+<div class="form">
+  <form #searchForm="ngForm" id="searchForm" (ngSubmit)="getAccount(searchForm.value.username, searchForm.value.tag)">
+    <input type="search" class="input" name="username" placeholder="Summoner Name..." ngModel #usernameInput="ngModel">
+    <input type="search" class="input" name="tag" placeholder="Tag..." ngModel #tagInput="ngModel">
+    <button class="btn info" type="submit" form="searchForm">Search</button>
+  </form>
+</div>
+
+
+<div *ngIf="!account" class="page">
+
+</div>
+  <div *ngIf="account">
+    <div style="background-color: #31313C;">
+    <h1><span style="color: white;">{{account.gameName}}</span>#{{account.tagLine}}</h1>
+  </div>
+
+
+<!-- Exibe mensagem de carregamento -->
+<h2 *ngIf="isLoading" class="loader"></h2>
+
+<!-- Exibe os dados quando carregados -->
+<div *ngIf="!isLoading">
+  <div class="stats">
+    <h4>Stats here...</h4>
+</div>
+
+<div class="masterybox">
+  <h2>Mastery</h2>
+</div>
+  <div class="mastery">
+    <div class="mastery left">
+      {{championsWithMastery[0].name}}
+      <br>
+      {{championsWithMastery[0].championPoints}}
+      <br>
+      {{championsWithMastery[0].championLevel}}
+    </div>
+
+    <div class="mastery centered">
+      {{championsWithMastery[1].name}}
+      <br>
+      {{championsWithMastery[1].championPoints}}
+      <br>
+      {{championsWithMastery[1].championLevel}}
+    </div>
+
+    <div class="mastery right">
+      {{championsWithMastery[2].name}}
+      <br>
+      {{championsWithMastery[2].championPoints}}
+      <br>
+      {{championsWithMastery[2].championLevel}}
+    </div>
+</div>
+
+
+
+
+<div class="matches">
+  <div *ngFor="let match of matches">
+    <div *ngFor="let player of match.info.participants">
+      <div *ngIf="player.puuid == account.puuid">
+        <div *ngIf="player.nexusLost == 1" class="mathes loss">
+          <h3>
+            {{match.info.gameMode}} | {{player.championName}} : <span style="color: white;">{{player.kills}}</span> / <span style="color: red;">{{player.deaths}}</span> / <span style="color: white;">{{player.assists}}</span> | KDA : {{((player.kills + player.assists) / player.deaths).toFixed(2)}}
+          </h3>
+        </div>
+        <div *ngIf="player.nexusLost == 0" class="matches win">
+          <h3>
+            {{match.info.gameMode}} | {{player.championName}} : <span style="color: white;">{{player.kills}}</span> / <span style="color: red;">{{player.deaths}}</span> / <span style="color: white;">{{player.assists}}</span> | KDA : {{((player.kills + player.assists) / player.deaths).toFixed(2)}}
+          </h3>
+        </div>
+          
         </div>
       </div>
     </div>
   </div>
+  
+</div>
+
+
 
    
 
